[FIX] FE performance

--- a/fe/index.html
+++ b/fe/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="canonical" href="https://shurl.ndria.dev/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>ShURL</title>
     <meta name="author" content="Andrea Cosentino">
     <meta name="description" content="Create short url easily">
+    <meta name="google-site-verification" content="sANDyZwNLCvpVwg7uz4gNQEY_64K_v7Au2J9LL9SUtQ" />
     <meta name="keywords" content="create short url shorturl link shortlink shurl shurl.ndria.dev ndria.dev url-shortner url-short link-short short-link generator">
     <meta name="language" content="Italian">
     <meta name="revisit-after" content="3 days">
