[FIX] description meta tag

--- a/fe/index.html
+++ b/fe/index.html
@@ -8,7 +8,7 @@
     <!-- Primary Meta Tags -->
     <title>ShURL</title>
     <meta name="author" content="Andrea Cosentino">
-    <meta name="description" content="Create short url easily">
+    <meta name="description" content="Login or register with email and password to create short url easily. ShURL!">
     <meta name="google-site-verification" content="sANDyZwNLCvpVwg7uz4gNQEY_64K_v7Au2J9LL9SUtQ" />
     <meta name="keywords" content="create short url shorturl link shortlink shurl shurl.ndria.dev ndria.dev url-shortner url-short link-short short-link generator">
     <meta name="language" content="Italian">
