[FIX] title tag

--- a/fe/index.html
+++ b/fe/index.html
@@ -6,7 +6,7 @@
     <link type="text/plain" rel="author" href="/humans.txt" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>ShURL</title>
+    <title>ShURL - Short URL easily</title>
     <meta name="author" content="Andrea Cosentino">
     <meta name="description" content="Login or register with email and password to create short url easily. ShURL!">
     <meta name="google-site-verification" content="sANDyZwNLCvpVwg7uz4gNQEY_64K_v7Au2J9LL9SUtQ" />
