--- a/fe/index.html
+++ b/fe/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link type="text/plain" rel="author" href="/humans.txt" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags -->
-    <title>ShURL - Easy Short URLs</title>
-    <meta name="author" content="Andrea Cosentino">
-    <meta name="description" content="Login or register with email and password to create short url easily. ShURL!">
-    <meta name="google-site-verification" content="sANDyZwNLCvpVwg7uz4gNQEY_64K_v7Au2J9LL9SUtQ" />
-    <meta name="keywords" content="create short url shorturl link shortlink shurl shurl.ndria.dev ndria.dev url-shortner url-short link-short short-link generator">
-    <meta name="language" content="Italian">
-    <meta name="revisit-after" content="3 days">
-    <meta name="robots" content="index, follow">
-    <meta name="title" content="ShURL">
-    <meta http-equiv="Reply-to" content="admin@ndria.dev">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/icon.svg" />
+	<link type="text/plain" rel="author" href="/humans.txt" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- Primary Meta Tags -->
+	<title>ShURL - Easy Short URLs</title>
+	<meta name="author" content="Andrea Cosentino">
+	<meta name="description" content="Create short URL easily with qrcode!">
+	<meta name="google-site-verification" content="sANDyZwNLCvpVwg7uz4gNQEY_64K_v7Au2J9LL9SUtQ" />
+	<meta name="keywords" content="create short url shorturl link shortlink shurl shurl.ndria.dev ndria.dev url-shortner url-short link-short short-link generator">
+	<meta name="language" content="Italian">
+	<meta name="revisit-after" content="3 days">
+	<meta name="robots" content="index, follow">
+	<meta name="title" content="ShURL - Easy Short URLs">
+	<meta http-equiv="Reply-to" content="admin@ndria.dev">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://shurl.ndria.dev/">
-    <meta property="og:title" content="ShURL">
-    <meta property="og:description" content="Create short url easily">
-    <meta property="og:image" content="/icon.svg">
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://shurl.ndria.dev/">
+	<meta property="og:title" content="ShURL">
+	<meta property="og:description" content="Create short url easily">
+	<meta property="og:image" content="/icon.svg">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://shurl.ndria.dev/">
-    <meta property="twitter:title" content="ShURL">
-    <meta property="twitter:description" content="Create short url easily">
-    <meta property="twitter:image" content="/icon.svg">
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://shurl.ndria.dev/">
+	<meta property="twitter:title" content="ShURL">
+	<meta property="twitter:description" content="Create short url easily">
+	<meta property="twitter:image" content="/icon.svg">
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+	<div id="root"></div>
+	<script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
