--- a/fe/index.html
+++ b/fe/index.html
@@ -13,7 +13,7 @@
 	<meta name="keywords" content="create short url shorturl link shortlink shurl shurl.ndria.dev ndria.dev url-shortner url-short link-short short-link generator">
 	<meta name="language" content="Italian">
 	<meta name="revisit-after" content="3 days">
-	<meta name="robots" content="index, follow">
+<!--	<meta name="robots" content="index, follow">-->
 	<meta name="title" content="ShURL - Easy Short URLs">
 	<meta http-equiv="Reply-to" content="admin@ndria.dev">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -33,7 +33,7 @@
 	<meta property="twitter:image" content="/icon.svg">
   </head>
   <body>
-	<div id="root"></div>
+	<div id="root" data-nosnippet></div>
 	<script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
